<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onRootViewClick"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:onClick="onRootViewClick"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/header_survey"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:layout_marginTop="@dimen/toolbar_size"
                android:background="@color/header_survey"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|bottom"
                    android:background="@color/header_survey"
                    android:contentDescription="@string/survey_container_bg_description"
                    android:scaleType="fitEnd"
                    android:src="@drawable/header_larvae_survey"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:layout_marginEnd="@dimen/screen_horizontal_margin"
                    android:layout_marginRight="@dimen/screen_horizontal_margin"
                    android:layout_marginTop="@dimen/screen_vertical_margin"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/building_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textColor="@color/white"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/text_headline"
                        tools:text="บ้านเลขที่ 123/321"
                        />

                    <TextView
                        android:id="@+id/place_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/text_subhead"
                        tools:text="หมู่ที่ 1 บ้านบางไผ่"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/space_between_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/space_between_content"
                            android:layout_marginRight="@dimen/space_between_content"
                            android:text="@string/number_of_resident"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_subhead"
                            />

                        <org.tanrabad.survey.presenter.view.StepPopupEditText
                            android:id="@+id/resident_count"
                            android:layout_width="@dimen/number_input_size"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:background="@drawable/bg_edittext_number"
                            android:ems="2"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="4"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_body"
                            tools:text="10"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_between_content"
                            android:layout_marginStart="@dimen/space_between_content"
                            android:text="@string/person"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_subhead"
                            />
                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_size"
                android:background="@color/shock_pink"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.AppBarOverlay"
                app:theme="@style/AppTheme.AppBarOverlay"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRootViewClick"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/shock_pink"
            android:gravity="center"
            android:text="@string/indoor"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            app:layout_widthPercent="50%"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/pink"
            android:gravity="center"
            android:text="@string/outdoor"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            app:layout_widthPercent="50%"
            />


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            >


            <android.support.percent.PercentRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1520dp"
                android:onClick="onRootViewClick"
                >

                <LinearLayout
                    android:id="@+id/indoor_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="1200dp"
                    android:orientation="vertical"
                    app:layout_widthPercent="50%"
                    />


                <LinearLayout
                    android:id="@+id/outdoor_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/indoor_container"
                    android:layout_toRightOf="@id/indoor_container"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:minHeight="1200dp"
                    android:orientation="vertical"
                    app:layout_widthPercent="50%"
                    />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/soft_keyboard_height"
                    android:layout_below="@id/indoor_container"
                    >

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:background="@drawable/shape_shadow_top_down"
                        />
                </FrameLayout>
            </android.support.percent.PercentRelativeLayout>
        </android.support.v4.widget.NestedScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_shadow_top_down"
            />
    </android.support.percent.PercentRelativeLayout>


</android.support.design.widget.CoordinatorLayout>
