...
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/list_padding_bottom"
        >

        <org.tanrabad.survey.presenter.view.StepPopupEditText
            android:id="@+id/total_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_number"
            android:gravity="center"
            android:hint="@string/total"
            android:imeOptions="actionNext"
...
            android:padding="@dimen/space_between_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_body"
            />

        <org.tanrabad.survey.presenter.view.StepPopupEditText
            android:id="@+id/found_larvae_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_between_content"
            android:layout_marginStart="@dimen/space_between_content"
            android:background="@drawable/bg_edittext_number"
            android:gravity="center"
...
