...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">


    <TextView
        android:id="@+id/card_title"
        style="@style/TanrabadTextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_card_building_list"/>

    <ImageButton
...
        android:background="@color/transparent"
        android:contentDescription="@string/building_edit"
        android:padding="@dimen/list_icon_padding"
        android:src="@mipmap/ic_edit_black"/>

    <TextView
        android:id="@+id/building_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_title"
        android:contentDescription="@string/number_building_list"
        android:gravity="center"
        android:textIsSelectable="false"
...
