...
            android:id="@+id/add_location_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent_50">

            <Button
                android:id="@+id/add_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@mipmap/ic_add_location_white_24dp"
                android:text="@string/define_building_location"/>
        </FrameLayout>
...
